<resources>
    <string name="app_name">MyFit.v1</string>
    <string name="uploadimg">UploadImg</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="quantity">Quantity</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="save">save</string>
    <string name="uploadImg" />
    <string name="enter_your_email">enter_your_email</string>
    <string name="enter_your_password">enter_your_password</string>
    <string name="enter_your_email1">Enter your email</string>
    <string name="send_verification">Send verification</string>
    <string name="_47">+47</string>
    <string name="login_with_mobile">Login with mobile</string>
</resources>