<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneActivity">

    <EditText
        android:id="@+id/phoneEditTextNumber"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Type your number"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:textColor="@color/main2"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/sendOTPBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/sendOTPBtn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="252dp"
        android:backgroundTint="@color/main2"
        android:text="@string/send_verification"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/BackStart"
        android:layout_width="77dp"
        android:layout_height="39dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="@color/main2"
        android:text="Back"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendOTPBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:text="@string/_47"
        android:textColor="@color/main2"
        app:layout_constraintBottom_toBottomOf="@+id/phoneEditTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_mobile"
        android:textColor="@color/main2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <ProgressBar
        android:id="@+id/phoneProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:indeterminateTint="@color/main2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

</androidx.constraintlayout.widget.ConstraintLayout>